--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "lint": "eslint . --fix",
-    "dev": "nest start --watch",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "dev": "nest start --debug --watch",
     "tsc": "tsc --noEmit",
     "test": "jest",
     "test:ci": "jest --coverage",
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "dotenv-expand": "^12.0.2",
+    "eslint": "^9.26.0",
     "joi": "^17.13.3",
     "ms": "^2.1.3",
     "pg": "^8.15.6",
@@ -52,8 +53,6 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.3",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-n": "^17.17.0",
@@ -68,7 +67,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "webpack": "^5.99.7"
   },
   "jest": {
     "moduleFileExtensions": [
