--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,6 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "target": "ES2023",
     "sourceMap": true,
     "outDir": "./dist",
@@ -15,18 +16,39 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
+    "useDefineForClassFields": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
     "paths": {
-      "libs/common": ["libs/common/src"],
-      "libs/common/*": ["libs/common/src/*"],
-      "libs/database": ["libs/database/src"],
-      "libs/database/*": ["libs/database/src/*"],
-      "libs/logger": ["libs/logger/src"],
-      "libs/logger/*": ["libs/logger/src/*"],
-      "package.json": ["./package.json"]
+      "libs/common": [
+        "libs/common/src"
+      ],
+      "libs/common/*": [
+        "libs/common/src/*"
+      ],
+      "libs/database": [
+        "libs/database/src"
+      ],
+      "libs/database/*": [
+        "libs/database/src/*"
+      ],
+      "libs/logger": [
+        "libs/logger/src"
+      ],
+      "libs/logger/*": [
+        "libs/logger/src/*"
+      ],
+      "package.json": [
+        "./package.json"
+      ]
     }
   },
-  "exclude": ["dist"]
+  "include": [
+    "apps",
+    "libs"
+  ],
+  "exclude": [
+    "dist"
+  ]
 }
