--- a/package.json
+++ b/package.json
@@ -19,19 +19,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.25.1",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-n": "^17.17.0",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "gts": "^6.0.2",
     "lefthook": "^1.11.9",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.3",
-    "typescript-eslint": "^8.31.1"
+    "npm-run-all": "^4.1.5"
   },
   "displayName": "CDOC",
   "engines": {
@@ -61,9 +50,17 @@
     "compose:d": "yarn --cwd backend compose:d"
   },
   "version": "0.1.0",
-  "workspaces": [
-    "backend",
-    "domain",
-    "frontend"
-  ]
+  "workspaces": {
+    "packages": [
+      "backend",
+      "domain",
+      "frontend"
+    ],
+    "nohoist": [
+      "**/@typescript-eslint/eslint-plugin",
+      "**/@typescript-eslint/parser",
+      "**/eslint-plugin-prettier",
+      "**/eslint"
+    ]
+  }
 }
