--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,20 +10,16 @@
     "source.fixAll": "always",
     "source.organizeImports": "always",
     "source.removeUnusedImports": "always",
-    "source.sortImports": "always",
+    "source.sortImports": "always"
   },
-  "editor.rulers": [
-    80,
-    100,
-    120
-  ],
+  "editor.rulers": [80, 100, 120],
   // files
   "files.encoding": "utf8",
   "files.eol": "\n",
   "files.insertFinalNewline": false,
   "files.trimFinalNewlines": true,
   "files.associations": {
-    ".env*": "shellscript",
+    ".env*": "shellscript"
   },
   // eslint
   "eslint.enable": true,
@@ -36,10 +32,7 @@
   // git
   "git.inputValidation": false,
   // jestrunner
-  "jestrunner.runOptions": [
-    "--testTimeout=999999",
-    "--detectOpenHandles"
-  ],
+  "jestrunner.runOptions": ["--testTimeout=999999", "--detectOpenHandles"],
   // javascript
   "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
   "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": true,
@@ -61,6 +54,6 @@
   // barrelr
   "barrelr.lineEnding": "LF",
   "barrelr.useDoubleQuotes": false,
-  "barrelr.useSemiColons": true,
-  // icons 
+  "barrelr.useSemiColons": true
+  // icons
 }
