--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,34 +1,34 @@
-name: "cdoc"
+name: 'cdoc'
 
 networks:
   cdoc:
-    name: "cdoc"
+    name: 'cdoc'
 
 services:
   cdoc-postgres:
-    image: "postgres"
-    hostname: "postgres"
-    container_name: "cdoc-postgres"
-    ports: ["${DOCKER_POSTGRES_PORT:?DOCKER_POSTGRES_PORT is required}:5432"]
-    networks: ["cdoc"]
+    image: 'postgres'
+    hostname: 'postgres'
+    container_name: 'cdoc-postgres'
+    ports: ['${DOCKER_POSTGRES_PORT:?DOCKER_POSTGRES_PORT is required}:5432']
+    networks: ['cdoc']
     environment:
-      POSTGRES_USER: "${DOCKER_POSTGRES_USERNAME:?DOCKER_POSTGRES_USERNAME is required}"
-      POSTGRES_PASSWORD: "${DOCKER_POSTGRES_PASSWORD:?DOCKER_POSTGRES_PASSWORD is required}"
-      POSTGRES_DB: "${DOCKER_POSTGRES_DATABASE:?DOCKER_POSTGRES_DATABASE is required}"
+      POSTGRES_USER: '${DOCKER_POSTGRES_USERNAME:?DOCKER_POSTGRES_USERNAME is required}'
+      POSTGRES_PASSWORD: '${DOCKER_POSTGRES_PASSWORD:?DOCKER_POSTGRES_PASSWORD is required}'
+      POSTGRES_DB: '${DOCKER_POSTGRES_DATABASE:?DOCKER_POSTGRES_DATABASE is required}'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       start_period: 10s
 
   cdoc-redis:
-    image: "redis/redis-stack-server"
-    hostname: "redis"
-    container_name: "cdoc-redis"
-    networks: [ "cdoc" ]
-    ports: [ "${DOCKER_REDIS_PORT:?DOCKER_REDIS_PORT is required}:6379" ]
+    image: 'redis/redis-stack-server'
+    hostname: 'redis'
+    container_name: 'cdoc-redis'
+    networks: ['cdoc']
+    ports: ['${DOCKER_REDIS_PORT:?DOCKER_REDIS_PORT is required}:6379']
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 5s
       timeout: 3s
       retries: 3
