--- a/backend/libs/logger/tsconfig.lib.json
+++ b/backend/libs/logger/tsconfig.lib.json
@@ -4,13 +4,6 @@
     "declaration": true,
     "outDir": "../../dist/libs/logger"
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "test",
-    "**/*spec.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
