--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,35 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cdoc/domain": "link:../domain",
+    "@hookform/resolvers": "^5.0.1",
+    "clsx": "^2.1.1",
+    "joi": "^17.13.3",
+    "joi-translation-pt-br": "^0.0.10",
+    "motion": "^12.10.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.5.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.2.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@tailwindcss/vite": "^4.1.5",
+    "@types/node": "^22.15.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "daisyui": "^5.0.35",
     "eslint": "^9.25.0",
     "eslint-plugin-n": "^17.17.0",
     "eslint-plugin-prettier": "^5.4.0",
@@ -27,6 +41,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-commonjs": "^0.10.4"
   }
 }
