--- a/backend/package.json
+++ b/backend/package.json
@@ -57,6 +57,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/cookie-parser": "^1.4.8",
+    "@types/date-fns": "^2.6.3",
     "@types/express": "^5.0.1",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.14",
