--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 3000",
+    "dev": "vite --host 0.0.0.0 --port 3000 --force",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
