--- a/backend/package.json
+++ b/backend/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^22.15.3",
     "@types/supertest": "^6.0.2",
     "concurrently": "^9.1.2",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-n": "^17.17.0",
