--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "deepmerge": "^4.3.1",
     "joi": "^17.13.3",
     "joi-translation-pt-br": "^0.0.10",
     "motion": "^12.10.0",
@@ -22,7 +23,6 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
-    "react-input-mask": "^2.0.4",
     "react-router": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
@@ -35,7 +35,6 @@
     "@types/node": "^22.15.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@types/react-input-mask": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@vitejs/plugin-react": "^4.4.1",
     "daisyui": "^5.0.35",
