--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "build:api": "nest build apps-api",
     "build:greendocs-extractor": "nest build apps-greendocs-extractor",
-    "build": "concurrently --names \"api,greendocs-extractor\" \"yarn build:api\" \"yarn build:greendocs-extractor\"",
+    "build:email-importer": "nest build apps-email-importer",
+    "build": "concurrently --names \"api,greendocs-extractor,email-importer\" \"yarn build:api\" \"yarn build:greendocs-extractor\" \"yarn build:email-importer\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "dev": "nest start --debug --watch",
     "tsc": "tsc --noEmit",
