--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "compose:d": "npm run compose -- -d"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.808.0",
+    "@aws-sdk/client-sqs": "^3.808.0",
     "@cdoc/domain": "link:../domain",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
@@ -41,6 +43,7 @@
     "ioredis": "^5.6.1",
     "jimp": "^1.6.0",
     "joi": "^17.13.3",
+    "mailparser": "^3.7.2",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "patch-package": "^8.0.0",
@@ -63,6 +66,7 @@
     "@types/express": "^5.0.1",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.14",
+    "@types/mailparser": "^3.4.6",
     "@types/mime-types": "^2.1.4",
     "@types/ms": "^2.1.0",
     "@types/multer": "^1.4.12",
@@ -115,6 +119,7 @@
       "^libs/database(|/.*)$": "<rootDir>/libs/database/src/$1",
       "^libs/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^libs/mailer(|/.*)$": "<rootDir>/libs/mailer/src/$1",
+      "^libs/queue(|/.*)$": "<rootDir>/libs/queue/src/$1",
       "^libs/session(|/.*)$": "<rootDir>/libs/session/src/$1",
       "^libs/storage(|/.*)$": "<rootDir>/libs/storage/src/$1",
       "^libs/stream(|/.*)$": "<rootDir>/libs/stream/src/$1"
