feat: adding readme and docker references

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -39,7 +39,7 @@ APPS_GREENDOCS_EXTRACTOR_RESOURCES_EXTRACTOR_PASSWORD = "{{APPS_GREENDOCS_EXTRAC
 
 #region libs/cache
 
-LIBS_CACHE_CONNECTION_STRING = "redis://localhost:$DOCKER_REDIS_PORT/0"
+LIBS_CACHE_URL = "redis://localhost:$DOCKER_REDIS_PORT/0"
 
 #endregion
 
@@ -65,7 +65,7 @@ LIBS_CRYPTO_KEY = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" # length:32
 
 #region libs/database
 
-LIBS_DATABASE_CONNECTION_STRING = "postgres://$DOCKER_POSTGRES_USERNAME:$DOCKER_POSTGRES_PASSWORD@localhost:$DOCKER_POSTGRES_PORT/$DOCKER_POSTGRES_DATABASE"
+LIBS_DATABASE_URL = "postgres://$DOCKER_POSTGRES_USERNAME:$DOCKER_POSTGRES_PASSWORD@localhost:$DOCKER_POSTGRES_PORT/$DOCKER_POSTGRES_DATABASE"
 LIBS_DATABASE_LOGGING           = false
 
 #endregion
@@ -86,7 +86,7 @@ LIBS_MAILER_SMTP_USERNAME     = "{{LIBS_MAILER_SMTP_USERNAME}}" # !
 #region libs/queue
 
 LIBS_QUEUE_PROVIDER                = "aws" # { enum: ["redis", "aws"], default: "redis" }
-LIBS_QUEUE_REDIS_CONNECTION_STRING = "redis://localhost:$DOCKER_REDIS_PORT/2"
+LIBS_QUEUE_REDIS_URL = "redis://localhost:$DOCKER_REDIS_PORT/2"
 LIBS_QUEUE_AWS_REGION              = "us-east-1"
 LIBS_QUEUE_AWS_ACCESS_KEY_ID       = "{{LIBS_QUEUE_AWS_ACCESS_KEY_ID}}" # !
 LIBS_QUEUE_AWS_SECRET_ACCESS_KEY   = "{{LIBS_QUEUE_AWS_SECRET_ACCESS_KEY}}" # !
@@ -96,7 +96,7 @@ LIBS_QUEUE_AWS_ACCOUNT_ID          = "{{LIBS_QUEUE_AWS_ACCOUNT_ID}}" # !
 
 #region libs/session
 
-LIBS_SESSION_CONNECTION_STRING = "redis://localhost:$DOCKER_REDIS_PORT/1"
+LIBS_SESSION_URL = "redis://localhost:$DOCKER_REDIS_PORT/1"
 LIBS_SESSION_ACCESS_TTL        = "4h"  
 LIBS_SESSION_LIMIT_TTL         = "14d"
 
@@ -105,7 +105,7 @@ LIBS_SESSION_LIMIT_TTL         = "14d"
 #region libs/storage
 
 LIBS_STORAGE_PROVIDER              = "aws" # { enum: ["local", "aws"], default: "local" }
-LIBS_STORAGE_LOCAL_PATH            = "../.tmp/storage"
+LIBS_STORAGE_LOCAL_PATH            = "./.tmp/storage"
 LIBS_STORAGE_AWS_REGION            = "us-east-1"
 LIBS_STORAGE_AWS_ACCESS_KEY_ID     = "{{LIBS_STORAGE_AWS_ACCESS_KEY_ID}}" # !
 LIBS_STORAGE_AWS_SECRET_ACCESS_KEY = "{{LIBS_STORAGE_AWS_SECRET_ACCESS_KEY}}" # !
@@ -118,6 +118,6 @@ LIBS_STORAGE_USER_COVER_URL        = "/user/{{userId}}/cover.{{ext}}"
 
 #region libs/stream
 
-LIBS_STREAM_CONNECTION_STRING = "redis://localhost:$DOCKER_REDIS_PORT/2"
+LIBS_STREAM_URL = "redis://localhost:$DOCKER_REDIS_PORT/2"
 
 #endregion
