--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "backend:build": "yarn --cwd backend build",
-    "backend:lint": "yarn --cwd backend lint",
-    "backend:tsc": "yarn --cwd backend tsc",
-    "domain:build": "yarn --cwd domain build",
-    "domain:lint": "yarn --cwd domain lint",
-    "domain:tsc": "yarn --cwd domain tsc",
-    "frontend:build": "yarn --cwd frontend build",
-    "frontend:lint": "yarn --cwd frontend lint",
-    "frontend:tsc": "yarn --cwd frontend tsc",
-    "build": "npm-run-all --parallel *:build",
-    "lint": "npm-run-all --parallel *:lint",
-    "tsc": "npm-run-all --parallel *:tsc",
-    "compose:down": "yarn --cwd backend compose:down",
-    "compose:up": "yarn --cwd backend compose:up",
-    "compose": "yarn --cwd backend compose",
-    "compose:d": "yarn --cwd backend compose:d"
+    "build:backend": "cd ./backend && yarn build",
+    "build:domain": "cd ./domain && yarn build",
+    "build:frontend": "cd ./frontend && yarn build",
+    "lint:backend": "cd ./backend && yarn lint",
+    "lint:domain": "cd ./domain && yarn lint",
+    "lint:frontend": "cd ./frontend && yarn lint",
+    "tsc:backend": "cd ./backend && yarn tsc",
+    "tsc:domain": "cd ./domain && yarn tsc",
+    "tsc:frontend": "cd ./frontend && yarn tsc",
+    "build": "npm-run-all --parallel build:*",
+    "lint": "npm-run-all --parallel lint:*",
+    "tsc": "npm-run-all --parallel tsc:*",
+    "compose:down": "cd ./backend && yarn compose:down",
+    "compose:up": "cd ./backend && yarn compose:up",
+    "compose": "cd ./backend && yarn compose",
+    "compose:d": "cd ./backend && yarn compose:d"
   },
   "version": "0.1.0",
   "workspaces": {
