--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "build:api": "nest build apps-api",
     "build:greendocs-extractor": "nest build apps-greendocs-extractor",
     "build:email-importer": "nest build apps-email-importer",
-    "build": "concurrently --names \"api,greendocs-extractor,email-importer\" \"yarn build:api\" \"yarn build:greendocs-extractor\" \"yarn build:email-importer\"",
+    "build": "npm-run-all --parallel build:*",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "dev": "nest start --debug --watch",
     "tsc": "tsc --noEmit",
@@ -72,7 +72,6 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.3",
     "@types/supertest": "^6.0.2",
-    "concurrently": "^9.1.2",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.0.1",
