--- a/domain/package.json
+++ b/domain/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "joi": "17.13.3",
+    "npm-run-all": "^4.1.5",
     "openapi-types": "^12.1.3"
   },
   "description": "Solução para automatização dos processos envolvidos com o CDOC",
@@ -33,17 +34,25 @@
   ],
   "homepage": "https://github.com/oppemsolutions/cdoc",
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "name": "@cdoc/domain",
   "company": "Oppem",
   "private": true,
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts"
+    }
+  },
   "scripts": {
-    "build:tsc": "tsc",
-    "build:alias": "tsc-alias",
-    "build": "yarn build:tsc && yarn build:alias",
+    "build:cjs": "tsc -p tsconfig.cjs.json && tsc-alias -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
+    "build": "npm-run-all --parallel build:*",
     "lint": "eslint . --fix",
     "tsc": "tsc --noEmit"
   },
-  "types": "./dist/index.d.ts",
   "version": "0.1.0"
 }
