--- a/domain/tsconfig.json
+++ b/domain/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "module": "CommonJS",
     "outDir": "./dist",
-    "declarationDir": "./dist",
     "rootDir": "src",
     "strict": true,
     "moduleResolution": "node",
@@ -30,20 +29,45 @@
     "noFallthroughCasesInSwitch": true,
     "isolatedModules": true,
     "paths": {
-      "#/*": ["src/*"],
-      "@app/mailer": ["libs/mailer/src"],
-      "@app/mailer/*": ["libs/mailer/src/*"],
-      "@app/session": ["libs/session/src"],
-      "@app/session/*": ["libs/session/src/*"],
-      "@app/storage": ["libs/storage/src"],
-      "@app/storage/*": ["libs/storage/src/*"],
-      "@app/stream": ["libs/stream/src"],
-      "@app/stream/*": ["libs/stream/src/*"]
+      "#/*": [
+        "src/*"
+      ],
+      "@app/mailer": [
+        "libs/mailer/src"
+      ],
+      "@app/mailer/*": [
+        "libs/mailer/src/*"
+      ],
+      "@app/session": [
+        "libs/session/src"
+      ],
+      "@app/session/*": [
+        "libs/session/src/*"
+      ],
+      "@app/storage": [
+        "libs/storage/src"
+      ],
+      "@app/storage/*": [
+        "libs/storage/src/*"
+      ],
+      "@app/stream": [
+        "libs/stream/src"
+      ],
+      "@app/stream/*": [
+        "libs/stream/src/*"
+      ]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
   "ts-node": {
-    "require": ["tsconfig-paths/register"]
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
